--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.9'
 
 services:
   app:
+    tty: true
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile
@@ -16,6 +18,7 @@ services:
     env_file: .env
     environment:
       RAILS_ENV: development
+    
 
   database:
     image: postgres:13.1
